--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,5 +1,6 @@
-<ol><%= @countries.each do |country| %>
-	<li><%= link_to country.country, country %></li>
+<ol><% @country.visits.each do |visit| %>
+	<%= visit.countries.current_user %>
+	<li><%#= link_to @user.country, country %></li>
 <%end %></ol>
 
 
