--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,10 @@
        <br>
        <a href="/visits">Visits</a>
        <br>
+       <a href="/settings">Account Settings</a>
+       <br>
       <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
-      <p>Hello, <%=current_user.name%>!</p>
+      <p>Hello, <%#=current_user.name%>!</p>
      <%end %>
      <% if !current_user %>
           <a href="/users/sign_up"> Sign Up </a>    
