--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,12 +21,14 @@
        <a href="/settings">Account Settings</a>
        <br>
       <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
-      <p>Hello, <%#=current_user.name%>!</p>
+      <p>Hello, <%=current_user.email%>!</p>
      <%end %>
      <% if !current_user %>
           <a href="/users/sign_up"> Sign Up </a>    
           <br>
-          <a href="/users/sign_in"> Log In </a>
+          <a href="/users/sign_in"> Sign In </a>
+          <br>
+          <%= link_to "Sign in with Github", user_github_omniauth_authorize_path%>
           <br>
       <% end %>
   
@@ -39,6 +41,7 @@
       <%=yield%>
       <br>
       <br>
+      
       <h5 class="notice"><%= notice %></h5>
       <h5 class="alert"><%= alert %></h5>
     </div>
