--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,10 @@
           <br>
           <%= link_to "Sign in with Github", user_github_omniauth_authorize_path%>
           <br>
+           <%= link_to "Sign in with Twitter", user_twitter_omniauth_authorize_path%>
+          <br>
+           <%= link_to "Sign in with Amazon", user_amazon_omniauth_authorize_path%>
+          <br>
       <% end %>
   
    </div>
