--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -1,1 +1,2 @@
-<%= link_to @visit.country.country, country_path(@visit.country) %>
+<%= @visit.id %>
+<%= link_to country.created_order, country_path(@visit.country) %>
