--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,17 +21,18 @@
        <a href="/settings">Account Settings</a>
        <br>
       <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
-      <p>Hello, <%=current_user.email%>!</p>
+      <p>Hello, <%=current_user.name_case%>!</p>
      <%end %>
      <% if !current_user %>
           <a href="/users/sign_up"> Sign Up </a>    
           <br>
-          <a href="/users/sign_in"> Sign In </a>
+          <a href="/users/sign_in"> Log In </a>
           <br>
           <div class="button">
             <%= link_to(image_tag("https://png.icons8.com/ios-glyphs/50/000000/github.png"), user_github_omniauth_authorize_path) %>
         
             <%= link_to(image_tag("https://png.icons8.com/color/50/000000/twitter.png"), user_twitter_omniauth_authorize_path) %>
+
       
            <%= link_to(image_tag("https://png.icons8.com/color/50/000000/amazon.png"), user_amazon_omniauth_authorize_path) %>
          </div>
