--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -3,5 +3,6 @@
 <%end %></ol>
 
 
-<p>To log in the countries and cities you want to visit click here! </a></p>
-<p>To log in the countries you've visited click<a href="/countries/new"> here! </a></p>
+<h5>To log in the countries and cities you want to visit click here! </a></h5>
+<h5>To log in the countries you've visited click<a href="/countries/new"> here! </a></h5>
+<h5> Go to <a href="/continents"> Continents. </a></h5>
