--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,12 +1,19 @@
+<% @country.visits.each do |visit| %>
+    Name: <%=visit.user.name%>
+    <br>
+    Travel date: <%= visit.visit_date %>
+    <br>
+    Travel Count: <%#= countvisit_order %>
+  <% end %>
+
+
+
 <h4> Continent: <%= @country.continent%></h4>
 <h5> Country: <%= @country.country%> </h5>
 <h5> Cities you toured: <%= @country.city%></h5>
 <p>Places you visited: <%= @country.description%></p>
 
-<% @country.visits.each do |visit| %>
-    Name: <%= link_to visit.user.email, user_path(visit.user) %>
-    <%= visit.visit_date %>
-    <br>
-  <% end %>
+
 
 <h5>To edit click<a href="/countries/edit"> here! </a></h5>
+
