--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -12,6 +12,9 @@
 <h5> Country: <%= @country.country%> </h5>
 <h5> Cities you toured: <%= @country.city%></h5>
 <p>Places you visited: <%= @country.description%></p>
+<%# if visit_date == nil %>
+	<p> Enter visit date <%= render partial: "visits/form", locals: {visit_country: @country.visits} %></p>
+<%# end %>
 
 
 
