--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @visits do |f| %>
+<%= form_for @visit do |f| %>
 <div>
   <%= f.datetime :'On which date did you visit this country' %>
   <br>
