seed drop & Current user

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,4 +1,4 @@
-<ol><% @countries.each do |country| %>
+<ol><% @user.countries.each do |country| %>
 	<li><%= link_to country.country, country %></li>
 <%end %></ol>
 
