--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <br>
        <a href="/countries"> Countries </a>
        <br>
-       <a href="/countries/visits">Visits</a>
+       <%#= link_to "Visits", country_visit_path %>
        <br>
        <a href="/settings">Account Settings</a>
 
