--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,15 +1,16 @@
 <% @country.visits.each do |visit| %>
-    Name: <%=visit.user.name%>
+    Name: <%=visit.user.name_case%>
     <br>
-    Travel date: <%= visit.visit_date %>
+    Travel date: <%= link_to visit.visit_date, country_path %>
     <br>
     Travel Count: <%#= countvisit_order %>
     <br
   <% end %>
 
 
+<br>
 
-<h4> Continent: <%= @country.continent%></h4>
+ <h4>Continent: <%= @country.continent%></h4>
 <h5> Country: <%= @country.country%> </h5>
 <h5> Cities you toured: <%= @country.city%></h5>
 <p>Places you visited: <%= @country.description%></p>
