--- a/app/views/countries/edit.html.erb
+++ b/app/views/countries/edit.html.erb
@@ -1,5 +1,6 @@
 <h1>Editing country</h1>
 <%= render 'form' %>
+<%= render 'visits/form' %>
 
 <%= link_to @country.country, @country %> |
 <%= link_to 'Back', countries_path %>
