--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,3 +1,4 @@
+<h3> COUNTRIES TRAVELLED </h3>
 <ol><% @user.countries.each do |country| %>
 	<li><%= link_to country.country, country %></li>
 <%end %></ol>
