--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+
+
   </head>
 
   <body>
@@ -31,16 +34,11 @@
           <br>
           <a href="/users/sign_in"> Log In </a>
           <br>
-          <div class="button">
-            <%= link_to "Google", user_google_oauth2_omniauth_authorize_path %>
+         <div class = 'button'>
+            <%= link_to(image_tag("https://png.icons8.com/color/50/000000/google-logo.png"),user_google_oauth2_omniauth_authorize_path) %>
 
             <%#= link_to(image_tag("https://png.icons8.com/ios-glyphs/50/000000/github.png"), user_github_omniauth_authorize_path) %>
-        
-            <%#= link_to(image_tag("https://png.icons8.com/color/50/000000/twitter.png"), user_twitter_omniauth_authorize_path) %>
-
-      
-           <%#= link_to(image_tag("https://png.icons8.com/color/50/000000/amazon.png"), user_amazon_omniauth_authorize_path) %>
-         </div>
+       </div>
       <% end %>
    </div>
     <div class="container">
