--- a/app/views/continents/index.html.erb
+++ b/app/views/continents/index.html.erb
@@ -3,7 +3,7 @@
 	<li><%= link_to continent.name, continent %></li>
 <%end %></ol>
 <br>
-<%= image_tag("http://almasalah.com/MediaStorage/GalleryImages/106304.jpg?width=750&&height=375", :alt => "rss feed") %>
+<%= image_tag("https://sciencetrends-techmakaillc.netdna-ssl.com/wp-content/uploads/2017/11/7-continents.png", :alt => "Continents") %>
 <br>
 <br>
 <p>For countries home page click <a href="/countries">here! </a></p>
