--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,35 +14,40 @@
   </head>
 
   <body>
-
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
-      <% if current_user %>
-      <a href="/continents"> Continents </a>
-      <br>
-       <a href="/countries"> Countries </a>
-       <br>
-       <%#= link_to "Visits", country_visit_path %>
-  
-       <a href="/settings">Account Settings</a>
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand">Travel Door</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <% if current_user %>
+              <li><a href="/continents"> Continents </a></li>
+              <li><a href="/countries"> Countries </a></li>
+              <li><a href="/settings">Account Settings</a></li>
+              <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+            <%end %>
+            <% if !current_user %>
+              <li><a href="/users/sign_up"> Sign Up </a></li>   
+              <li> <a href="/users/sign_in"> Log In </a></li>
+              <li><%= link_to(image_tag("https://png.icons8.com/color/50/000000/google-logo.png"),user_google_oauth2_omniauth_authorize_path) %></li>
+            <% end %>
+              </ul>
+            </li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+ 
 
-       <br>
-      <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
-      <p>Hello, <%=current_user.name_case%>!</p>
-     <%end %>
-     <% if !current_user %>
-          <a href="/users/sign_up"> Sign Up </a>    
-          <br>
-          <a href="/users/sign_in"> Log In </a>
-          <br>
-         <div class = 'button'>
-            <%= link_to(image_tag("https://png.icons8.com/color/50/000000/google-logo.png"),user_google_oauth2_omniauth_authorize_path) %>
-
-            <%#= link_to(image_tag("https://png.icons8.com/ios-glyphs/50/000000/github.png"), user_github_omniauth_authorize_path) %>
-       </div>
-      <% end %>
-   </div>
+ 
     <div class="container">
-      <h2>Travel Door</h2>
 
       <%=yield%>
       <br>
