--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,6 +30,17 @@ body {
 	padding: 0px;
 }
 
+.image {
+	padding-top: 50px;
+	padding-left: 200px;
+	height: 90px;
+	width: 200px;
+}
+
+.title {
+	color: #00008B;
+	font-family: Helvetica, Garamond, sans-serif, bold; 
+}
 
 
 
