--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,4 +1,4 @@
-<h2> Account Settings</h2>
+<h2 class= 'title'> Account Settings</h2>
 <br>
 <p>To edit your profile click on <%= link_to "Account Update", edit_user_registration_path %>.</p>
 <br>
