--- a/app/views/continents/index.html.erb
+++ b/app/views/continents/index.html.erb
@@ -1,4 +1,4 @@
-<h3> Continents </h3>
+<h3 class= 'title'> Continents </h3>
 <ol><% @continents.each do |continent| %>
 	<li><%= link_to continent.name, continent %></li>
 <%end %></ol>
