--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,4 +1,4 @@
-<h3> COUNTRIES TRAVELLED </h3>
+<h3 class= 'title'> COUNTRIES TRAVELLED </h3>
 <ol><% @user.countries.each do |country| %>
 	<li><%= link_to country.country, country %></li>
 <%end %></ol>
