--- a/app/views/countries/edit.html.erb
+++ b/app/views/countries/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing country</h1>
+<h2 class= 'title'>Editing country</h2>
 <%= render 'form' %>
-<%= render 'visits/form' %>
+
 
 <%= link_to @country.country, @country %> |
 <%= link_to 'Back', countries_path %>
