--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,20 +1,30 @@
-<% @country.visits.each do |visit| %>
-    Name: <%=visit.user.name_case%>
-    <br>
-    Travel date: <%= link_to visit.visit_date.strftime("%B %d, %Y"), visit_path %>
-    <br>
-    Times travelled to country: <%= current_user.visits.count %>
-    <br
-  <% end %>
-
-
-<br>
 
  <h4>Continent: <%= @country.continent%></h4>
 <h5> Country: <%= @country.country%> </h5>
 <h5> Cities you toured: <%= @country.city%></h5>
 <p>Places you visited: <%= @country.description%></p>
 
+<br>
+
+<%= form_for([@country, @visit]) do |f| %>
+	<form action='/countries' method='POST'>
+	 <%= f.label :'When was your visit?' %>
+	  <br>
+	  <%= f.date_select :visit_date, :discard_hours => true%>
+	  <br>
+	  <br>
+	  <%= f.submit "Submit" %>
+<% end %>
+
+<br>
+<br>
+
+<% @country.visits.each do |visit| %>
+    Travel date: <%= visit.visit_date%>
+    <br>
+  <% end %>
+
+<br>
 
 
 <h5>To edit click<a href="/countries/edit"> here! </a></h5>
