--- a/app/views/travels/home.html.erb
+++ b/app/views/travels/home.html.erb
@@ -1,8 +1,8 @@
-<h3 class= 'title'> Welcome <%= current_user.name %>!</h3>
+<h2 class= 'title'> Welcome <%= current_user.name %>!</h2>
 
 <p> Travel door is at your fingertips as you travel around the world and cross countries off your bucket list. You can view a list of continents and a brief background of each. You can add countries to the countries you have visited thus far and have your own personal list. AND you can add countries you want to visit!</p>
 
-<p> To learn more about the continents around the world click <a href="/continents">here! </a></p>
+<p> To learn interesting facts on the continents around the world click <a href="/continents">here! </a></p>
 
 <p> To keep track of the countries you visited click <a href="/countries">here! </a></p>
 <p> To log a country to your list click <a href="/countries/new">here! </a></p> 
