--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -7,7 +7,7 @@
   <br>
   <%= f.label :'Which country did you travel to?' %>
   <br>
-  <%= f.text_field :country %>
+  <%= f.text_field :name %>
   <br>
   <br>
    <%= f.label :'What are some cities you went to?' %>
