--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,8 +1,8 @@
 
  <h4>Continent: <%= @country.continent%></h4>
-<h5> Country: <%= @country.country%> </h5>
+<h5> Country: <%= @country.name%> </h5>
 <h5> Cities you toured: <%= @country.city%></h5>
-<p>What did you do while there? <%= @country.description%></p>
+<h5>What did you do while there? <%= @country.description%></h5>
 
 <br>
 
@@ -23,13 +23,15 @@
 <br>
 <br>
 
-<p><% @country.visits.each do |visit| %>
+<h5><% @country.visits.each do |visit| %>
 	Place Visited: <%= visit.visit_places %>
 		<br>
     Travel Date: <%= visit.visit_date%>
     <br>
+    <%#= button_to "Delete", country_visit_path(@visit.country), @visit, :method => :delete %>
     <br>
-  <% end %></p>
+  <% end %></h5>
+   
 
    <%#= form_tag(country_visit_path(@visit.country, @visit), :method=> :delete) do %>
 
@@ -39,6 +41,8 @@
 
 <br>
 
+ <%= button_to "Edit", edit_country_path %>
+<h5><%#<a href="/countries/edit"> Edit</a></h5>%>
 
-<h5>To edit click<a href="/countries/edit"> here! </a></h5>
+ <%= button_to "Delete", @country, :method => :delete %>
 
