--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -15,9 +15,9 @@
   <%= f.text_field :city%>
   <br>
   <br>
-  <%= f.label :'What are some places/things you visited?' %>
+  <%= f.label :Description %>
   <br>
-  <%= f.text_field :description %>
+  <%= f.text_area :description %>
   <br>
   <br>
   <%= f.submit "Submit" %>
