update for visits

--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -2,7 +2,7 @@
 	<form action='/countries' method='POST'>
 		<%= f.label :'Additional places visited:' %>
 	  <br>
-	  <%= f.text_field :visit_places%>
+	  <%= f.text_area :visit_places%>
 	  <br>
 	  <br>
 	 <%= f.label :'When was your visit?' %>
