--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,5 +1,5 @@
 
- <h4> <%= @country.continent%></h4>
+<h4> <%= @country.continent%></h4>
 <h5> Country Visited: <%= @country.name%> </h5>
 <h5> Cities you toured: <%= @country.city%></h5>
 <h5>Description: <%= @country.description%></h5>
@@ -9,12 +9,11 @@
 <%= render "visits/form" %>
 <br>
 <%= render "visits/countryvisit" %>
-<%# DELETING VISIT %>
-<%#= button_to "Delete", country_visit_path(@visit.country, @visit), :method => :delete %>
+
 <br>
 
- <%= button_to "Edit", edit_country_path %>
-<%#= button_to "Edit", href="/countries/:id/edit" %>
+ <%= button_to "Edit Country", edit_country_path %>
+
 <br>
- <%= button_to "Delete", @country, :method => :delete %>
+ <%= button_to "Delete Country", @country, :method => :delete %>
 
