nested resource page

--- a/app/views/countries/edit.html.erb
+++ b/app/views/countries/edit.html.erb
@@ -1,4 +1,4 @@
 <h2 class= 'title'>Editing country</h2>
 <%= render 'form' %>
 <br>
-<%= link_to 'Back', countries_path %>
+<%= link_to 'Back', country_path %>
