--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -15,5 +15,10 @@
 
 <br>
 <br>
+
+ <a href="/countries"> Back </a>
+
+<br>
+<br>
  <%= button_to "Delete Country", @country, :method => :delete %>
 
