--- a/app/views/visits/_countryvisit.html.erb
+++ b/app/views/visits/_countryvisit.html.erb
@@ -1,6 +1,6 @@
 <h5><% @country.visits.each do |visit| %>
 	<% if visit.visit_places || visit.visit_date %>
-		Place Visited: <%= visit.visit_places %>
+		Place Visited: <%= link_to visit.visit_places, country_visit_path(visit.country, visit) %>
 			<br>
 	    Travel Date: <%= visit.visit_date%>
 	    <br>
