--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-   
-
-
+  
   </head>
 
   <body>
@@ -23,7 +21,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+
           <a class="navbar-brand" href="/">Travel Door</a>
+           <%= image_tag("https://png.icons8.com/office/16/000000/globe.png") %>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -56,5 +56,13 @@
       <h5 class="notice"><%= notice %></h5>
       <h5 class="alert"><%= alert %></h5>
     </div>
+   <footer class="footer">
+      <div class="container">
+        <h6 class="text-muted">Travel Door. All rights reserved. SA. </h6>
+
+        
+      </div>
+    </footer>
   </body>
+
 </html>
