--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
     </div>
    <footer class="footer">
       <div class="container">
-        <h6 class="text-muted">Travel Door. All rights reserved. SA. </h6>
+        <h6 class="text-muted">Travel Door. All rights reserved. SA. © 2018</h6>
 
         
       </div>
