--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -1,7 +1,7 @@
 <h4><%= @visit.user.name %></h4>
 <p><%= @visit.country.name%></p>
 <p><%= @visit.visit_places %></p>
-<p><%= @visit.visit_date %></p>
+<p><%= @visit.visit_date.strftime("%m/%d/%Y") %></p>
 
 <p><a href="/countries"> Countries </a></p>
 <p><%= link_to "Back", @country %></p>
