--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -15,7 +15,7 @@
  <br>
  <br>
 
- <%= link_to "If you want to see each of the attraction/sights in order", visitsorder_country_visits_path(@visit.country, @visit) %>
+ <%= link_to "To see each attraction ordered by date:", visitsorder_country_visits_path(@visit.country, @visit) %>
 
 <br>
 <br>
