--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -1,3 +1,18 @@
+<% if @country.errors.any? %>
+  <div id="error_explanation">
+    <h2>
+      <%= pluralize(@country.errors.count, "error") %>
+      prohibited this country from being saved:
+    </h2>
+ 
+    <ul>
+    <% @country.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_for @country do |f| %>
 <div>
   <%= f.label :'What continent did you visit?' %>
@@ -23,3 +38,6 @@
   <%= f.submit "Submit" %>
 </div>
 <% end %>
+
+ 
+
