--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,13 +27,13 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <% if current_user %>
+            <% if user_signed_in? %>
               <li><a href="/continents"> Continents </a></li>
               <li><a href="/countries"> Countries </a></li>
               <li><a href="/settings">Account Settings</a></li>
               <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %>
             <%end %>
-            <% if !current_user %>
+            <% if !user_signed_in? %>
               <li><a href="/users/sign_up"> Sign Up </a></li>   
               <li> <a href="/users/sign_in"> Log In </a></li>
               <li><%= link_to(image_tag("https://png.icons8.com/color/50/000000/google-logo.png"),user_google_oauth2_omniauth_authorize_path) %></li>
