--- a/app/views/visits/_countryvisit.html.erb
+++ b/app/views/visits/_countryvisit.html.erb
@@ -1,11 +1,12 @@
 <h5><% @country.visits.each do |visit| %>
-	<% if visit.visit_places || visit.visit_date %>
+	<% if visit.visit_places %>
+
 		Place Visited: <%= link_to visit.visit_places, country_visit_path(visit.country, visit) %>
 			<br>
 	    Date: <%= visit.visit_date.strftime("%m/%d/%Y")%>
 	    <br>
 	    <br>
-
+	    
 	    <%= button_to "Delete", country_visit_path(visit.country, visit), :method => :delete, :class => "destroy" %>
     	<br>
     	<br>
