bucket_list features

--- a/app/views/continents/index.html.erb
+++ b/app/views/continents/index.html.erb
@@ -8,5 +8,6 @@
 <br>
 <p>For countries home page click <a href="/countries">here! </a></p>
 <p>To log in the countries you've visited click<a href="/countries/new"> here! </a></p>
+<p> Add to your <a href="/buckets">Bucket List! </a></p>
 
 
