--- a/app/views/continents/show.html.erb
+++ b/app/views/continents/show.html.erb
@@ -5,5 +5,6 @@
 <p><a href="/continents">Back </a></p>
 <p>To log in the countries you've visited click<a href="/countries/new"> here! </a></p>
 <p>To view your list of countries visited click <a href="/countries">here! </a></p>
+<p> Add to your <a href="/buckets">Bucket List! </a></p>
 
 
