--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -6,6 +6,7 @@
 
 <p> To keep track of the countries you visited click <a href="/countries">here! </a></p>
 <p> To log a country to your list click <a href="/countries/new">here! </a></p> 
+<p> Add to your <a href="/buckets">Bucket List! </a></p>
 
 
 <ol class='image'><%= image_tag("http://swdistrict.org/wp-content/uploads/2017/07/big-globe-and-hands.png", :alt => "Continents") %></ol>
