checkbox, and fixed image

--- a/app/views/continents/index.html.erb
+++ b/app/views/continents/index.html.erb
@@ -3,7 +3,7 @@
 	<li><%= link_to continent.name, continent %></li>
 <%end %></ol>
 <br>
-<%= image_tag("https://sciencetrends-techmakaillc.netdna-ssl.com/wp-content/uploads/2017/11/7-continents.png", :alt => "Continents") %>
+<%= image_tag("https://mbtskoudsalg.com/images/continent-of-africa-png-7.png", :alt => "Continents") %>
 <br>
 <br>
 <p>For countries home page click <a href="/countries">here! </a></p>
