--- a/app/views/buckets/index.html.erb
+++ b/app/views/buckets/index.html.erb
@@ -1,9 +1,12 @@
 <h2 class= 'title'> Bucket List </h2>
 
-<ol><%# @user.buckets.uniq.each do |bucket| %>
+<% @user.buckets.uniq.each do |bucket| %>
 	
-	<li><%#= link_to bucket.country, bucket %></li>
-<%#end %></ol>
+	<div class="checkbox">
+	<label><input type="checkbox" name="checkbox" id="outside" class="sum" value="10" data-toggle="checkbox"> <%= link_to bucket.country, bucket %></label>
+	</div><br/>
+	
+<%end %>
 
 <br>
 
@@ -12,3 +15,4 @@
 
 <h5>Log a New<a href="/buckets/new"> bucket list country. </a></h5>
 <h5> Go to <a href="/continents"> Continents. </a></h5>
+
