--- a/app/views/buckets/show.html.erb
+++ b/app/views/buckets/show.html.erb
@@ -1,4 +1,4 @@
-<h4> Continent<%= @bucket.continent%></h4>
+<h4> Continent: <%= @bucket.continent%></h4>
 <h5> Country: <%= @bucket.country%> </h5>
 <h5> Cities you want to tour: <%= @bucket.city%></h5>
 <h5>Description: <%= @bucket.description%></h5>
