--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,24 +1,11 @@
 <a href="#" class="js-next" data-id="<%=@country.id%>">Next Country</a>
-<h4 class="countryCont"> <%= @country.continent%></h4>
-<h5 class=CountryName"> Country Visited: <%= @country.name%> </h5>
-<h5 class="countryCity"> Cities you toured: <%= @country.city%></h5>
-<h5 class="Countrydescript">Description: <%= @country.description%></h5>
+<br>
+<a href="#" class="js-previous" data-id="<%=@country.id%>">Previous Country</a>
 
-<script type="text/javascript" charset="utf-8">
-$(function () {
-  $(".js-next").on("click", function() {
-    var nextId = parseInt($(".js-next").attr("data-id")) + 1;
-    $.get("/countries/" + nextId + ".json", function(data) {
-      $(".countryCont").text(data["continent"]);
-      $(".CountryName").text(data["name"]);
-      $(".countryCity").text(data["city"]);
-      $(".Countrydescript").text(data["description"]);
-      // re-set the id to current on the link
-      $(".js-next").attr("data-id", data["id"]);
-    });
-  });
-});
-</script>
+<h4 class="countryCont"> <%= @country.continent%></h4>
+<h5 class="countryName"> Country Visited: <%= @country.name%> </h5>
+<h5 class="countryCity"> Cities you toured: <%= @country.city%></h5>
+<h5 class="countryDescript">Description: <%= @country.description%></h5>
 
 <br>
 
