--- a/app/assets/stylesheets/body.css
+++ b/app/assets/stylesheets/body.css
@@ -34,6 +34,14 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+
+.js-see_more{
+  font-size: 12px;
+  padding: 10px;
+  color: black;
+  font-family: Helvetica, Garamond, sans-serif;
+  font-style: italic; 
+}
 .footer {
   position: absolute;
   bottom: 0;
