--- a/app/views/buckets/_bucket.html.erb
+++ b/app/views/buckets/_bucket.html.erb
@@ -1,6 +1,9 @@
 <h5><% @buckets.each do |bucket| %>
 	<% if bucket.country.present? %>
-		<label><input type="checkbox" name="checkbox" id="outside" class="sum" value="10" data-toggle="checkbox"><strong> <%= link_to bucket.country, bucket %></strong></label>
+		<label><input type="checkbox" name="checkbox" id="outside" class="checkbox" data-toggle="checkbox"></input>
+			
+			<del><strong name="check_count" class="check_count"><%= link_to bucket.country, bucket %></strong></del>
+		</label>
 		<a href="#" class="js-see_more" data-id="<%=@bucket.id%>">(See More...)</a>
 		 <%#= button_to "Delete", bucket, :method => :delete, :class => "destroy" %>
 		  <br>
@@ -9,6 +12,9 @@
 	
 <%end %>
 </h5>
+
+
+
 
 
 
