--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -3,7 +3,13 @@
 <div>
 	<ol><% @user.countries.uniq.each do |country| %>
 		
-		<li><%= link_to country.name, country %></li>
+		<strong><li><%= link_to country.name, country %></li><strong>
+		<a href="#" id="see_more" onclick="see_more();"data-id="<%=country.id%>">(See More...)</a>
+		
+		<p id="cont"class="hidden">Continent: <%= country.continent%></p>
+		<p id="city" class="hidden">City: <%= country.city%></p>
+
+		<a href="#" id="see_less" onclick="see_less();"data-id="<%=country.id%>"class="hidden">(See Less...)</a>
 	<%end %></ol>
 </div>
 
@@ -16,3 +22,25 @@
 
 <h5>Log a New<a href="/countries/new"> Country. </a></h5>
 <h5> Go to <a href="/continents"> Continents. </a></h5>
+
+<script type="text/javascript">
+	function see_more(){
+		  $('#see_more').addClass('hidden');
+		  //or
+		  $('#cont').removeClass('hidden');
+		  $('#city').removeClass('hidden');
+		  $('#see_less').removeClass('hidden');
+	}
+
+	function see_less(){
+		  $('#see_less').addClass('hidden');
+		  //or
+		  $('#cont').removeClass('hidden');
+		  $('#city').removeClass('hidden');
+		  $('#see_more').removeClass('hidden');
+	}
+
+
+
+
+</script>
