--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,6 +1,6 @@
 <a href="#" class="js-next" data-id="<%=@country.id%>">Next Country</a>
 <br>
-<a href="#" class="js-previous" data-id="<%=@country.id%>">Previous Country</a>
+
 
 <h4 class="countryCont"> <%= @country.continent%></h4>
 <h5 class="countryName"> Country Visited: <%= @country.name%> </h5>
@@ -24,7 +24,7 @@
 <br>
 <br>
 
- <a href="/countries"> Back </a>
+<a href="#" class="back"> Back </a>
 
 <br>
 <br>
