--- a/app/views/buckets/_bucket.html.erb
+++ b/app/views/buckets/_bucket.html.erb
@@ -7,7 +7,7 @@
 				<del><strong name="check_count" class="check_count" id="check_count"><%= link_to bucket.country, bucket %></strong></del>
 
 
-			<div style="display:none"id="del_ete"><%= button_to "Delete", bucket, :method => :delete %></div></label>
+			<div id="del_ete"><%= button_to "Delete", bucket, :method => :delete %></div></label>
 			 
 			  <br>
 		 <% end %>
