--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -1,10 +1,9 @@
 
-
 <%= form_for([@country, @visit]) do |f| %>
 	<form action='/countries' method='POST'>
-		<%= f.label :'Additional places visited:' %>
+	<%= f.label :'Additional places visited:' %>
 	  <br>
-	  <%= f.text_area :visit_places%>
+	 <%= f.text_area :visit_places%>
 	  <br>
 	  <br>
 	 <%= f.label :'When was your visit?' %>
@@ -13,4 +12,6 @@
 	  <br>
 	  <br>
 	  <%= f.submit "Add" %>
-<% end %>
+	<% end %>
+</form>
+
