--- a/app/views/buckets/show.html.erb
+++ b/app/views/buckets/show.html.erb
@@ -5,7 +5,7 @@
 <p class="bucketCity">Cities you want to visit: <%= @bucket.city %></p>
 <p class="bucketDescription">Description: <%= @bucket.description %></p>
 <br>
-
+<br>
 
 
 </div>
@@ -15,14 +15,15 @@
 <div class="flip-control">
 
 	<% if @bucket.id > 1 %>
-		<button  class="js-previous" data-id="<%=@bucket.id%>">Previous Country</button>
+		<button  class="previous" data-id="<%=@bucket.id%>">Previous Country</button>
 	<% end %>
 
-    <button class="js-next" data-id="<%=@bucket.id%>">Next Country</button>
+    <button class="next" data-id="<%=@bucket.id%>">Next Country</button>
 
 
 
 	<button class="back"> Back </button>
+	<button><%= link_to "Edit", edit_bucket_path %></button>
 
 </div>
 
